layout issues CFY-3696 CFY-4009

--- a/app/styles/deployments/_deployment.scss
+++ b/app/styles/deployments/_deployment.scss
@@ -703,7 +703,6 @@
         max-width: 100%;
         padding: 0 20px;
         margin: 10px 0 0;
-        overflow: hidden;
 
         .gs-table {
             margin: 0;
@@ -731,7 +730,7 @@
     }
     div[ng-switch-when="nodes"], div[ng-switch-when="executions"], .executions, .nodesTable {
         margin: 30px 0 0;
-        padding: 0 20px 20px;
+        padding: 0;
 
         .gs-table {
             tr {
@@ -776,11 +775,12 @@
     }
     .deploymentLoader {
         position: absolute;
-        width: 100%;
-        //        height: 100%;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         background-color: #fff;
         text-align: center;
-        top: 0;
         z-index: 1000;
 
         .gs-loader {
